--- a/app/index.html
+++ b/app/index.html
@@ -29,9 +29,11 @@
           <td id="candidate-3"></td>
         </tr>
       </tbody>
+      <input type="file" id="fileinput" accept="image/*">
     </table>
   </div>
   <input type="text" id="candidate" />
+  <a href="#" onclick="App.upload()" class="btn btn-primary">Upload file</a>
   <a href="#" onclick="App.voteForCandidate()" class="btn btn-primary">Vote</a>
 </body>
 </html>
