--- a/app/index.html
+++ b/app/index.html
@@ -35,5 +35,10 @@
   <input type="text" id="candidate" />
   <a href="#" onclick="App.upload()" class="btn btn-primary">Upload file</a>
   <a href="#" onclick="App.voteForCandidate()" class="btn btn-primary">Vote</a>
+  <a href="#" onclick="App.addVote()" class="btn btn-primary">Add Vote</a>
+  <br><br><a href="#" onclick="App.checkVote()" class="btn btn-primary">Check Vote</a>
+  <br><br><a href="#" onclick="App.checkVoteOwner()" class="btn btn-primary">Check Vote Owner</a>
+  <br><br><a href="#" onclick="App.transferVote()" class="btn btn-primary">Transfer vote</a>
+  <br><br><a href="#" onclick="App.takeOwnership()" class="btn btn-primary">Take ownership</a>
 </body>
 </html>
