--- a/app/index.html
+++ b/app/index.html
@@ -40,5 +40,7 @@
   <br><br><a href="#" onclick="App.checkVoteOwner()" class="btn btn-primary">Check Vote Owner</a>
   <br><br><a href="#" onclick="App.transferVote()" class="btn btn-primary">Transfer vote</a>
   <br><br><a href="#" onclick="App.takeOwnership()" class="btn btn-primary">Take ownership</a>
+  <br><br><a href="#" onclick="App.checkCandidate()" class="btn btn-primary">Check candidate</a>
+  <br><br><a href="#" onclick="App.registerCandidate()" class="btn btn-primary">Register candidate</a>
 </body>
 </html>
