Add: candidate and voter struct

--- a/app/index.html
+++ b/app/index.html
@@ -41,6 +41,7 @@
   <br><br><a href="#" onclick="App.transferVote()" class="btn btn-primary">Transfer vote</a>
   <br><br><a href="#" onclick="App.takeOwnership()" class="btn btn-primary">Take ownership</a>
   <br><br><a href="#" onclick="App.checkCandidate()" class="btn btn-primary">Check candidate</a>
+  <br><br><a href="#" onclick="App.registerVoter()" class="btn btn-primary">Register voter</a>
   <br><br><a href="#" onclick="App.registerCandidate()" class="btn btn-primary">Register candidate</a>
 </body>
 </html>
